// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar disables the back button when there is no browser history 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    >
      <span
        className="flex_f16jawj4"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
      <span
        className="flex_f16jawj4"
        key="1"
        title="test display name2"
      >
        <pure(ChevronRightIcon)
          className="chevron_fin4unf"
        />
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path2"
        >
          test display name2
        </Link>
      </span>
    </div>
    <div
      className="flex_f16jawj4"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="Back"
      >
        <div>
           
          <WithStyles(IconButton)
            className="backLink_fxaclcu"
            disabled={true}
            onClick={[Function]}
          >
            <pure(ArrowBackIcon)
              className="backIcon_f116wd06 disabled_fl0don4"
            />
          </WithStyles(IconButton)>
        </div>
      </WithStyles(Tooltip)>
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      />
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          icon={[Function]}
          id="test id"
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          outlined={false}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      enterDelay={300}
      key="1"
      title="test disabled title2"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          disabled={true}
          icon={[Function]}
          id="test id2"
          onClick={[MockFunction]}
          outlined={false}
          title="test title2"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders nothing when there are no breadcrumbs or actions 1`] = `""`;

exports[`Toolbar renders outlined action buttons 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    >
      <span
        className="flex_f16jawj4"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
      <span
        className="flex_f16jawj4"
        key="1"
        title="test display name2"
      >
        <pure(ChevronRightIcon)
          className="chevron_fin4unf"
        />
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path2"
        >
          test display name2
        </Link>
      </span>
    </div>
    <div
      className="flex_f16jawj4"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="Back"
      >
        <div>
           
          <WithStyles(IconButton)
            className="backLink_fxaclcu"
            disabled={false}
            onClick={[Function]}
          >
            <pure(ArrowBackIcon)
              className="backIcon_f116wd06 enabled_fep5z4h"
            />
          </WithStyles(IconButton)>
        </div>
      </WithStyles(Tooltip)>
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      />
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          id="test id"
          onClick={[MockFunction]}
          outlined={true}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders primary action buttons 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    >
      <span
        className="flex_f16jawj4"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
      <span
        className="flex_f16jawj4"
        key="1"
        title="test display name2"
      >
        <pure(ChevronRightIcon)
          className="chevron_fin4unf"
        />
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path2"
        >
          test display name2
        </Link>
      </span>
    </div>
    <div
      className="flex_f16jawj4"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="Back"
      >
        <div>
           
          <WithStyles(IconButton)
            className="backLink_fxaclcu"
            disabled={false}
            onClick={[Function]}
          >
            <pure(ArrowBackIcon)
              className="backIcon_f116wd06 enabled_fep5z4h"
            />
          </WithStyles(IconButton)>
        </div>
      </WithStyles(Tooltip)>
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      />
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className="buttonAction_f10oq0s9"
          color="secondary"
          id="test id"
          onClick={[MockFunction]}
          outlined={false}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders primary action buttons without outline, even if outline is true 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    >
      <span
        className="flex_f16jawj4"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
      <span
        className="flex_f16jawj4"
        key="1"
        title="test display name2"
      >
        <pure(ChevronRightIcon)
          className="chevron_fin4unf"
        />
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path2"
        >
          test display name2
        </Link>
      </span>
    </div>
    <div
      className="flex_f16jawj4"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="Back"
      >
        <div>
           
          <WithStyles(IconButton)
            className="backLink_fxaclcu"
            disabled={false}
            onClick={[Function]}
          >
            <pure(ArrowBackIcon)
              className="backIcon_f116wd06 enabled_fep5z4h"
            />
          </WithStyles(IconButton)>
        </div>
      </WithStyles(Tooltip)>
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      />
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className="buttonAction_f10oq0s9"
          color="secondary"
          id="test id"
          onClick={[MockFunction]}
          outlined={false}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders with two breadcrumbs and two actions 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    >
      <span
        className="flex_f16jawj4"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
      <span
        className="flex_f16jawj4"
        key="1"
        title="test display name2"
      >
        <pure(ChevronRightIcon)
          className="chevron_fin4unf"
        />
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path2"
        >
          test display name2
        </Link>
      </span>
    </div>
    <div
      className="flex_f16jawj4"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="Back"
      >
        <div>
           
          <WithStyles(IconButton)
            className="backLink_fxaclcu"
            disabled={false}
            onClick={[Function]}
          >
            <pure(ArrowBackIcon)
              className="backIcon_f116wd06 enabled_fep5z4h"
            />
          </WithStyles(IconButton)>
        </div>
      </WithStyles(Tooltip)>
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      />
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          icon={[Function]}
          id="test id"
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          outlined={false}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      enterDelay={300}
      key="1"
      title="test disabled title2"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          disabled={true}
          icon={[Function]}
          id="test id2"
          onClick={[MockFunction]}
          outlined={false}
          title="test title2"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders without actions and one breadcrumb 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    >
      <span
        className="flex_f16jawj4"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
    </div>
    <div
      className="flex_f16jawj4"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="Back"
      >
        <div>
           
          <WithStyles(IconButton)
            className="backLink_fxaclcu"
            disabled={false}
            onClick={[Function]}
          >
            <pure(ArrowBackIcon)
              className="backIcon_f116wd06 enabled_fep5z4h"
            />
          </WithStyles(IconButton)>
        </div>
      </WithStyles(Tooltip)>
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      />
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  />
</div>
`;

exports[`Toolbar renders without actions, one breadcrumb, and a page name 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    >
      <span
        className="flex_f16jawj4"
        key="0"
        title="test display name"
      >
        <Link
          className="unstyled_f1ikaigl ellipsis_f15ay66x link_f1b3v6im"
          replace={false}
          to="/some/test/path"
        >
          test display name
        </Link>
      </span>
    </div>
    <div
      className="flex_f16jawj4"
    >
      <WithStyles(Tooltip)
        enterDelay={300}
        title="Back"
      >
        <div>
           
          <WithStyles(IconButton)
            className="backLink_fxaclcu"
            disabled={false}
            onClick={[Function]}
          >
            <pure(ArrowBackIcon)
              className="backIcon_f116wd06 enabled_fep5z4h"
            />
          </WithStyles(IconButton)>
        </div>
      </WithStyles(Tooltip)>
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      >
        test page title
      </span>
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  />
</div>
`;

exports[`Toolbar renders without breadcrumbs and a component page title 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    />
    <div
      className="flex_f16jawj4"
    >
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      >
        <div
          id="myComponent"
        >
          test page title
        </div>
      </span>
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          icon={[Function]}
          id="test id"
          onClick={[MockFunction]}
          outlined={false}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders without breadcrumbs and a string page title 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    />
    <div
      className="flex_f16jawj4"
    >
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      >
        test page title
      </span>
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          icon={[Function]}
          id="test id"
          onClick={[MockFunction]}
          outlined={false}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders without breadcrumbs and one action 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    />
    <div
      className="flex_f16jawj4"
    >
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      />
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          icon={[Function]}
          id="test id"
          onClick={[MockFunction]}
          outlined={false}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;

exports[`Toolbar renders without breadcrumbs and two actions 1`] = `
<div
  className="root_f1vld0bw topLevelToolbar_fbk8awx"
>
  <div
    style={
      Object {
        "minWidth": 100,
      }
    }
  >
    <div
      className="breadcrumbs_farqb1 flex_f16jawj4"
    />
    <div
      className="flex_f16jawj4"
    >
      <span
        className="pageName_fm8co7i ellipsis_f15ay66x"
      />
    </div>
  </div>
  <div
    className="actions_f1vuwukv"
  >
    <WithStyles(Tooltip)
      enterDelay={300}
      key="0"
      title="test tooltip"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          icon={[Function]}
          id="test id"
          onClick={[MockFunction]}
          outlined={false}
          title="test title"
        />
      </div>
    </WithStyles(Tooltip)>
    <WithStyles(Tooltip)
      enterDelay={300}
      key="1"
      title="test disabled title2"
    >
      <div>
        <BusyButton
          busy={false}
          className=""
          color="secondary"
          disabled={true}
          icon={[Function]}
          id="test id2"
          onClick={[MockFunction]}
          outlined={false}
          title="test title2"
        />
      </div>
    </WithStyles(Tooltip)>
  </div>
</div>
`;
